Has connect to DB

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,43 @@
     <artifactId>bookerBot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <properties>
+        <telegram_bot.version>4.9.1</telegram_bot.version>
+        <!--        <slf4j.version>1.7.5</slf4j.version>-->
+        <!--        <log4j.version>2.13.3</log4j.version>-->
+        <!--        <jsoup.version>1.13.1</jsoup.version>-->
+    </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>${telegram_bot.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.16</version>
+        </dependency>
+
+    </dependencies>
+
+
 
 </project>
